--- a/src/site/asciidoc/manual/json-template-layout.vm.adoc
+++ b/src/site/asciidoc/manual/json-template-layout.vm.adoc
@@ -279,11 +279,11 @@ One can also provide JSON-formatted additional fields:
 </JsonTemplateLayout>
 ----
 
-Additional event template fields can also be introduced using properties- and
-YAML-formatted configuration:
+Additional event template fields can very well be introduced using properties-,
+YAML-, and JSON-formatted configurations:
 
 .Properties-formatted configuration with JSON-formatted additional fields
-[source, properties]
+[source,properties]
 ----
 appender.console.layout.type = JsonTemplateLayout
 appender.console.layout.eventTemplateUri = classpath:GelfLayout.json
@@ -315,6 +315,32 @@ JsonTemplateLayout:
     - key: "aList"
       value: '[1, 2, "three"]'
       format: "JSON"
+----
+
+.JSON-formatted configuration with JSON-formatted additional fields
+[source,json]
+----
+{
+  "JsonTemplateLayout": {
+    "eventTemplateAdditionalField": [
+      {
+        "key": "marker",
+        "value": "{\"$resolver\": \"marker\", \"field\": \"name\"}",
+        "format": "JSON"
+      },
+      {
+        "key": "aNumber",
+        "value": "1",
+        "format": "JSON"
+      },
+      {
+        "key": "aList",
+        "value": "[1, 2, \"three\"]",
+        "format": "JSON"
+      }
+    ]
+  }
+}
 ----
 
 [#recycling-strategy]
