--- a/src/site/asciidoc/download.adoc
+++ b/src/site/asciidoc/download.adoc
@@ -76,35 +76,12 @@ program called sha512sum is included in many unix distributions.
 
 == Previous Releases
 
-Log4j 2.3 was the last 2.x release to support Java 6. Those artifacts
-can be found at:
-
-|===
-|Distribution |Mirrors |Checksum |Signature
-
-|Apache Log4j 2 binary (tar.gz)
-|https://www.apache.org/dyn/closer.lua/logging/log4j/2.3/apache-log4j-2.3-bin.tar.gz[apache-log4j-2.3-bin.tar.gz]
-|https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-bin.tar.gz.md5[apache-log4j-2.3-bin.tar.gz.md5]
-|https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-bin.tar.gz.asc[apache-log4j-2.3-bin.tar.gz.asc]
-
-|Apache Log4j 2 binary (zip)
-|https://www.apache.org/dyn/closer.lua/logging/log4j/2.3/apache-log4j-2.3-bin.zip[apache-log4j-2.3-bin.zip]
-|https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-bin.zip.md5[apache-log4j-2.3-bin.zip.md5]
-|https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-bin.zip.asc[apache-log4j-2.3-bin.zip.asc]
-
-|Apache Log4j 2 source (tar.gz)
-|https://www.apache.org/dyn/closer.lua/logging/log4j/2.3/apache-log4j-2.3-src.tar.gz[apache-log4j-2.3-src.tar.gz]
-|https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-src.tar.gz.md5[apache-log4j-2.3-src.tar.gz.md5]
-|https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-src.tar.gz.asc[apache-log4j-2.3-src.tar.gz.asc]
-
-|Apache Log4j 2 source (zip)
-|https://www.apache.org/dyn/closer.lua/logging/log4j/2.3/apache-log4j-2.3-src.zip[apache-log4j-2.3-src.zip]
-|https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-src.zip.md5[apache-log4j-2.3-src.zip.md5]
-|https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-src.zip.asc[apache-log4j-2.3-src.zip.asc]
-|=======================================================================
+Log4j 2.12.1 was the last 2.x release to support Java 7 while Log4j 2.3 was the last 2.x release to support
+Java 6. The Log4j team no longer provides support for Java 6 or 7.
 
 All previous releases of Apache log4j can be found in the
-https://archive.apache.org/dist/logging/log4j/[archive repository].
+https://archive.apache.org/dist/logging/log4j/[ASF archive repository]. Of course, all releases are availble for
+use as dependencies from the https://search.maven.org/search?q=org.apache.logging.log4j[Maven Central Repository]
 
 == Using Log4j on your classpath
 
