--- a/src/site/asciidoc/manual/layouts.adoc
+++ b/src/site/asciidoc/manual/layouts.adoc
@@ -254,6 +254,12 @@ specified. If both are present the message pattern will be ignored and an error 
 If not supplied only the text derived from the logging message will be used. See
 link:#PatternLayout[PatternLayout]  for information on the pattern strings.
 
+|omitEmptyFields
+|boolean
+|If true fields which are null or are zero-length strings will not be included as a field in
+the Gelf JSON. This setting will not affect whether those fields appear in the message fields. The
+default value is false.
+
 |patternSelector
 |PatternSelector
 |The PatternSelector to use to format the String. A messagePattern and patternSelector cannot both be
