--- a/src/site/asciidoc/manual/garbagefree.adoc
+++ b/src/site/asciidoc/manual/garbagefree.adoc
@@ -431,6 +431,8 @@ creates a vararg array. Logging a lambda expression by itself is
 garbage-free: `logger.debug(() -> callExpensiveMethod())`.
 * The `Logger.traceEntry` and `Logger.traceExit` methods create
 temporary objects.
+* Time calculations are not garbage free when log4j2.usePreciseClock is set to true.
+The default is false.
 ****
 
 [#Performance]
