--- a/src/site/asciidoc/faq.adoc
+++ b/src/site/asciidoc/faq.adoc
@@ -273,8 +273,8 @@ manual page] for more details.)
 
 From log4j-2.9 onward::
 From log4j-2.9 onward, log4j2 will print all internal logging to the
-console if system property `log4j2.debug` is defined (with any or no
-value).
+console if system property `log4j2.debug` is either defined empty or its value
+equals to `true` (ignoring case).
 
 Prior to log4j-2.9::
 Prior to log4j-2.9, there are two places where internal logging can be
