LOG4J2-2553 - Correct documentation for SyslogAppender when using TLS

--- a/src/site/asciidoc/manual/appenders.adoc
+++ b/src/site/asciidoc/manual/appenders.adoc
@@ -4518,12 +4518,12 @@ conforms with either the BSD Syslog format or the RFC 5424 format.
 <?xml version="1.0" encoding="UTF-8"?>
 <Configuration status="warn" name="MyApp" packages="">
   <Appenders>
-    <TLSSyslog name="bsd" host="localhost" port="6514">
+    <Syslog name="bsd" host="localhost" port="6514" protocol="SSL">
       <SSL>
         <KeyStore   location="log4j2-keystore.jks" passwordEnvironmentVariable="KEYSTORE_PASSWORD"/>
         <TrustStore location="truststore.jks"      passwordFile="${sys:user.home}/truststore.pwd"/>
       </SSL>
-    </TLSSyslog>
+    </Syslog>
   </Appenders>
   <Loggers>
     <Root level="error">
