LOG4J2-3166 - Fix log event Level vs LoggerConfig Level table.

--- a/src/site/asciidoc/manual/architecture.adoc
+++ b/src/site/asciidoc/manual/architecture.adoc
@@ -292,7 +292,7 @@ for further processing (Yes) or discarded (No).
 
 |  |`TRACE` |`DEBUG` |`INFO` |`WARN` |`ERROR` |`FATAL` |`OFF`
 
-|`ALL` |✅ |✅ |✅ |✅ |✅ |✅ |❌
+|`ALL` |❌ |❌ |❌ |❌ |❌ |❌ |❌
 
 |`TRACE` |✅ |❌ |❌ |❌ |❌ |❌ |❌
 
@@ -306,7 +306,7 @@ for further processing (Yes) or discarded (No).
 
 |`FATAL` |✅ |✅ |✅ |✅ |✅ |✅ |❌
 
-|`OFF` |❌ |❌ |❌ |❌ |❌ |❌ |❌
+|`OFF` |✅ |✅ |✅ |✅ |✅ |✅ |✅
 |===
 
 === Filter
