--- a/src/site/asciidoc/manual/configuration.adoc
+++ b/src/site/asciidoc/manual/configuration.adoc
@@ -170,7 +170,7 @@ include the Console Appender. If the result is false then a List Appender will b
 </Configuration>
 ----
 
-Natively Log4j contains the SystemProperty Arbister that can evaluate whether to include elements based on
+Natively Log4j contains the SystemProperty Arbiter that can evaluate whether to include elements based on
 whether a SystemProperty is non-null or has a specific value, a ClassArbiter that makes its decision
 based on whether the specified class is present, and a ScriptArbiter that makes its decision based
 on the result of the script configured with it.
